tests/errors/implicit_typing4.f90
subroutine iddr_rsvd(matvect)
    implicit none
end
